--- a/panel/panel.html
+++ b/panel/panel.html
@@ -3,6 +3,7 @@
     <script src="../lib/jquery-2.1.3.js"></script>
   </head>
   <body>
+    <span class="path"></span>
     <script src="panel.js"></script>
   </body>
 </html>
