--- a/panel/panel.html
+++ b/panel/panel.html
@@ -1,9 +1,28 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <script src="../lib/jquery-2.1.3.js"></script>
+  	<link rel="stylesheet" href="./panel.css"></link>
   </head>
   <body>
-    <span class="path"></span>
-    <script src="panel.js"></script>
+  	<button class="flextest-btn save-btn">Save to file</button>
+  	<div class="flextest-log action-log">
+        <div class="action-table-header"></div>
+        <div class="action-table-wrapper">
+            <table cellspacing="0" class="action-table">
+                <thead>
+                    <tr>
+                        <th class="action-name first"><div class="th-inner">Action</div></td>
+                        <th class="action-path"><div class="th-inner">Element Path</div></td>
+                        <th class="action-mouse-pos"><div class="th-inner">Mouse Position</div></td>
+                        <th class="action-key-code"><div class="th-inner">Keypress Code</div></td>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+  	</div>
+
+  <script src="../lib/jquery-2.1.3.js"></script>
+  <script src="panel.js"></script>
   </body>
 </html>
